# unifieddomain

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ModelsForms/: db.sqlite3
ModelsForms/AppTwo/: forms.py  views.py
ModelsForms/AppTwo/migrations/: 0001_initial.py  0002_auto_20200420_2033.py  0003_auto_20200420_2054.py  0004_auto_20200420_2054.py
ModelsForms/ProTwo/: settings.py  urls.py
ModelsForms/templates/: index.html  users.html
advancedclassbasedview/: db.sqlite3
advancedclassbasedview/advcbv/: settings.py  urls.py
advancedclassbasedview/basic_app/: models.py  urls.py  views.py
advancedclassbasedview/basic_app/migrations/: 0001_initial.py
advancedclassbasedview/basic_app/templates/basic_app/: basic_app_base.html  school_confirm_delete.html  school_detail.html  school_form.html  school_list.html
advancedclassbasedview/templates/: base.html  index.html
basicforms/: db.sqlite3
basicforms/basicapp/: forms.py
basicforms/basicforms/: settings.py  urls.py
basicforms/templates/basicapp/: form_page.html  index.html
config/: default.toml  local.toml
crates/ud-common/: Cargo.toml
crates/ud-common/src/: config.rs  lib.rs  logging.rs
crates/ud-ssh-authz/: Cargo.toml
crates/ud-ssh-authz/src/: main.rs
crates/udctl/: Cargo.toml
crates/udctl/src/: main.rs
crates/udd/: Cargo.toml
crates/udd/migrations/: 0001_init.sql
crates/udd/src/: main.rs
deploy/: docker-compose.yml  kerberos-provision.sh  kerberos-sync.sh  udd.Dockerfile
deploy/systemd/: ud-ssh-authz.service  udd.service
docs/: architecture.md  quickstart.md  threat-model.md
first_project/: db.sqlite3  populate_first_app.py
first_project/first_app/: models.py  urls.py
first_project/first_app/migrations/: 0001_initial.py
first_project/first_project/: settings.py  urls.py
first_project/static/CSS/: mystyle.css
first_project/templates/: index.html
first_project/templates/first_app/: index.html
learning_templates/basic_app/: urls.py  views.py
learning_templates/learning_templates/: settings.py  urls.py
learning_templates/templates/basic_app/: base.html  index.html  other.html  relative_url_templates.html
learning_users/: db.sqlite3
learning_users/basic_app/: models.py  urls.py  views.py
learning_users/basic_app/migrations/: 0001_initial.py
learning_users/learning_users/: settings.py  urls.py
learning_users/templates/basic_app/: base.html  index.html  login.html  registration.html
