[workspace]
members = [
    "crates/ud-common",
    "crates/udd",
    "crates/udctl",
    "crates/ud-ssh-authz",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["UnifiedDomain Team"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
time = { version = "0.3", features = ["formatting", "serde"] }
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1.3", features = ["http2"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
http = "1.1"
serde_with = "3.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
argon2 = "0.5"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "migrate", "time"] }
rand_core = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"
rcgen = { version = "0.12", features = ["x509-parser"] }
sha2 = "0.10"
hex = "0.4"
[patch.crates-io]
# no overrides
