[package]
name = "ud-ssh-authz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
ud-common = { path = "../ud-common" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
